# reason-vscode-snippet-parser

./: .gitignore  README.md  ReasonVscodeSnippetParserTest.opam  azure-pipelines.yml  package.json
.ci/: publish-test-results.yml
__snapshots__/: SnippetParserSedlex.24010b06.0.snapshot  SnippetParserSedlex.33dcab40.0.snapshot  SnippetParserSedlex.4084497d.0.snapshot  SnippetParserSedlex.477291f5.0.snapshot  SnippetParserSedlex.4e8eb424.0.snapshot  SnippetParserSedlex.4fa00dad.0.snapshot  SnippetParserSedlex.699d3f3b.0.snapshot  SnippetParserSedlex.71803ced.0.snapshot  SnippetParserSedlex.7fee7693.0.snapshot  SnippetParserSedlex.962dde63.0.snapshot  SnippetParserSedlex.a9db0f62.0.snapshot  SnippetParserSedlex.b5e84bea.0.snapshot  SnippetParserSedlex.b5e9823c.0.snapshot  SnippetParserSedlex.c5c610f3.0.snapshot  SnippetParserSedlex.c6feecc0.0.snapshot  SnippetParserSedlex.d7bdc335.0.snapshot  SnippetParserSedlex.d86bb89e.0.snapshot  SnippetParserSedlex.e02c2a7d.0.snapshot  SnippetParserSedlex_outputvalue.0ac4d2e4.0.snapshot  SnippetParserSedlex_outputvalue.131cf594.0.snapshot  SnippetParserSedlex_outputvalue.259458dd.0.snapshot  SnippetParserSedlex_outputvalue.3654c19e.0.snapshot  SnippetParserSedlex_outputvalue.43212616.0.snapshot  SnippetParserSedlex_outputvalue.4326821c.0.snapshot  SnippetParserSedlex_outputvalue.435132c7.0.snapshot  SnippetParserSedlex_outputvalue.531caf17.0.snapshot  (+78 more)
esy.lock/: index.json
src/: Rench.re  dune
src/SnippetParserSedlex/: LexBuffer.re  Lexer.re  MenhirParser.dot  MenhirParser.mly  Parser.re  Snippet.re  SnippetParserSedlex.re  dune
(+9 files in other folders)
