(library
    (name        SnippetParserSedlex)
    (public_name Rench.SnippetParserSedlex)
    (flags (:standard -w -21 -w -30))
    (libraries
       base
       stdio
       sedlex
       compiler-libs.common
       menhirLib
    )
    (virtual_deps menhir)
    (preprocess
      (
        staged_pps 
        ppx_import 
        ppx_deriving.std 
        ppx_enumerate 
        sedlex.ppx
      )
    )
 )
 
(menhir (modules MenhirParser) )
